<resources>
    <string name="app_name">post</string>
    <string name="title">Title</string>
    <string name="enter_the_title_of_the_new_post">Enter the title of the new post</string>
    <string name="context">Context</string>
    <string name="enter_the_text_of_the_new_post">Enter the text of the new post</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="bn_new">New</string>
    <string name="clear">Clear</string>
    <string name="error_empty_db">No internet connection and local copy is empty</string>
    <string name="error_lost_connection">No internet connection but local copy available</string>
</resources>